src/redisearch_rs/rune_trie_snapshots/tests/integration/snapshots/lex_wildcard_no_match.snap
---
source: rune_trie_snapshots/tests/integration/wildcard_iteration.rs
expression: dump
---
size: 7

query: xyz  pattern="xyz"
  <no matches>
