src/redisearch_rs/rune_trie_snapshots/tests/integration/snapshots/lex_wildcard_question_mark.snap
---
source: rune_trie_snapshots/tests/integration/wildcard_iteration.rs
expression: dump
---
size: 7

query: ?at  pattern="?at"
  bat         numDocs=1
  cat         numDocs=1
  rat         numDocs=1
